feat: Squash commits, Complete task and Docs
